# trumpet

./: .gitignore  Cargo.toml  README.md  TODO.org  generate-proto.sh
src/: lib.rs  main.rs
src/common/: mod.rs
src/hdfs/: mod.rs
tests/: hdfs.rs
